fix: remove white space in between sticky nave and background pic

--- a/client/src/stickyNav/sn.css
+++ b/client/src/stickyNav/sn.css
@@ -42,7 +42,7 @@
 
 @media only screen and (max-width: 725px) {
     #navbar {
-        margin-top: -4px;
+        margin-top: -8px;
     }
 
     .filler {
